--- a/src/app/ModuloAdministracion/pg-administradores/pg-administradores.component.html
+++ b/src/app/ModuloAdministracion/pg-administradores/pg-administradores.component.html
@@ -165,7 +165,7 @@
     [resizable]="false"
   >
   <ng-template pTemplate="header">
-    <span class="text-xl font-bold">Actualización</span>
+    <span class="text-xl font-bold">Actualización Administrador</span>
   </ng-template>
   
   <ng-template pTemplate="content">
