--- a/src/app/ModuloAdministracion/pg-puntoverde/pg-puntoverde.component.html
+++ b/src/app/ModuloAdministracion/pg-puntoverde/pg-puntoverde.component.html
@@ -172,7 +172,7 @@
     [resizable]="false"
   >
   <ng-template pTemplate="header">
-    <span class="text-xl font-bold">{{strEstado}}</span>
+    <span class="text-xl font-bold">{{strEstado}} Punto Verde </span>
   </ng-template>
   
   <ng-template pTemplate="content">
