--- a/src/app/ModuloAdministracion/pg-material/pg-material.component.html
+++ b/src/app/ModuloAdministracion/pg-material/pg-material.component.html
@@ -128,6 +128,8 @@
         </span>
         <input type="number" placeholder="Valor por libra" id="valor" [(ngModel)]="intvalor" class="form-control" min="5" max="10000" (input)="intvalor = intvalor" required style="font-size: 14px;"/>
       </div>
+      <label for="Valor" class="form-label" style="font-size: 10px;">(min 5- max 1000)  </label>
+
     </ng-template>
     
     <ng-template pTemplate="footer">
@@ -162,7 +164,8 @@
               <i class="pi pi-pencil"></i>
           </span>
           <input type="number" placeholder="Valor por libra en greencoins" id="Valor" [(ngModel)]="objSeleccion.valor_por_libra" class="form-control" min="5" max="10000" required style="font-size: 14px;"/>
-        </div>
+      </div>
+      <label for="Valor" class="form-label" style="font-size: 10px;">(min 5- max 1000)  </label>
     </ng-template>
     
     <ng-template pTemplate="footer">
