--- a/src/app/ModuloAdministracion/pg-perfil-admin/pg-perfil-admin.component.html
+++ b/src/app/ModuloAdministracion/pg-perfil-admin/pg-perfil-admin.component.html
@@ -52,7 +52,7 @@
                   </div>
 
                   <div class="row">
-                    <div class="col-lg-3 col-md-4 label">Correo Electrónico</div>
+                    <div class="col-lg-3 col-md-4 label">Correo Electrónico: </div>
                     <div class="col-lg-9 col-md-8">{{ admin?.correo_electronico }}</div>
                   </div>
                   <!--
