--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -100,7 +100,7 @@
                       </div>
                       <div class="col-12" style="margin-top: -5px; margin-bottom: -30px;" >
                         <a href="/recuperar" style="font-size: 13px;" >¿Olvidaste tu contraseña?</a>
-                        <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora!</a></p>
+                        <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora</a></p>
                       </div>
                     </form>
     
