--- a/src/app/Template/pg-recuperar/pg-recuperar.component.html
+++ b/src/app/Template/pg-recuperar/pg-recuperar.component.html
@@ -58,7 +58,7 @@
                         <button class="btn btn-primary w-100" type="submit" >Enviar código</button>
                       </div>
                       <div class="col-12" style="margin-top: -5px; margin-bottom: -30px;" >
-                        <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora!</a></p>
+                        <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora</a></p>
                       </div>
 
 
@@ -119,7 +119,7 @@
                           <button class="btn btn-primary w-100" type="submit" >Actualizar</button>
                         </div>
                         <div class="col-12" style="margin-top: -5px; margin-bottom: -30px;" >
-                          <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora!</a></p>
+                          <p class="small mb-0" style="font-size: 13px; margin-top: 10px;">No tienes cuenta? <a href="/registro">Regístrate ahora</a></p>
                         </div> 
   
                       </form>
