--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -54,7 +54,7 @@
                         </div>
                       </div> 
                       <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;" *ngIf="tipo === ''">
-                        <p class="small mb-0" style="font-size: 13px;">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
+                        <p class="small mb-0" style="font-size: 13px;">¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
                       </div>
 
                     <form #ciudadanoform="ngForm" *ngIf="tipo === 'ciudadano'" (ngSubmit)="register(ciudadanoform)" class="row g-3 needs-validation" novalidate style="margin-top: -15px;">
@@ -112,7 +112,7 @@
                       <div class="col-12 form-group" style="margin-top: 0px;">
                         <div class="form-check">
                           <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required required (change)="onTermsChange($event)">
-                          <label class="form-check-label" for="acceptTerms" style="font-size: 12px;">Estoy de acuerdo y acepto los <a href="" (click)="ModalTerminosCondiciones($event)">términos y condiciones</a></label>
+                          <label class="form-check-label" for="acceptTerms" style="font-size: 12px;">He leído y acepto los <a href="" (click)="ModalTerminosCondiciones($event)">términos y condiciones</a></label>
                           <div class="invalid-feedback floating-invalid-feedback">Debes aceptar antes de enviar.</div>
                         </div>
                       </div>
@@ -120,7 +120,7 @@
                         <button class="btn btn-primary w-100" type="submit">Crear Cuenta</button>
                       </div>
                       <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;">
-                        <p class="small mb-0" style="font-size: 13px;">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
+                        <p class="small mb-0" style="font-size: 13px;">¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
                       </div>
                     </form>
                     
@@ -136,7 +136,7 @@
                         </div>
                         <div class="invalid-feedback floating-invalid-feedback">Debes ingresar el RUC del negocio!</div>
                         <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;">
-                          <p class="small mb-0" style="font-size: 13px;">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
+                          <p class="small mb-0" style="font-size: 13px;">¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
                         </div>
                       </div>
                     
@@ -224,7 +224,7 @@
                       <div class="col-12 form-group" style="margin-top: 0px;">
                         <div class="form-check">
                           <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required required (change)="onTermsChange($event)">
-                          <label class="form-check-label" for="acceptTerms" style="font-size: 12px;">Estoy de acuerdo y acepto los <a href="" (click)="ModalTerminosCondiciones($event)">términos y condiciones</a></label>
+                          <label class="form-check-label" for="acceptTerms" style="font-size: 12px;">He leído y acepto los <a href="" (click)="ModalTerminosCondiciones($event)">términos y condiciones</a></label>
                           <div class="invalid-feedback floating-invalid-feedback">Debes aceptar antes de enviar.</div>
                         </div>
                       </div>
@@ -233,7 +233,7 @@
                         <button class="btn btn-primary w-100" type="submit">Crear Cuenta</button>
                       </div>
                       <div class="col-12" style="margin-top: 5px; margin-bottom: -30px;">
-                        <p class="small mb-0" style="font-size: 13px;">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
+                        <p class="small mb-0" style="font-size: 13px;">¿Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
                       </div>
                     </form>
                     
