--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -217,6 +217,25 @@
           <i class="bi bi-menu-button-wide"></i><span>Ofertas</span>
         </a>
       </li><!-- End Components Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" (click)="SeccionPuntosVerdes($event)" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-journal-text"></i><span>Ver Códigos</span>
+        </a>
+      </li><!-- End Forms Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" (click)="SeccionHistorialReciclaje($event)" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-journal-text"></i><span>Historial de reciclaje</span>
+        </a>
+      </li><!-- End Forms Nav -->
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" (click)="SeccionPuntosVerdes($event)" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-journal-text"></i><span>Mis puntos verdes</span>
+        </a>
+      </li><!-- End Forms Nav -->
+
       <li class="nav-heading">Páginas</li>
 
       <li class="nav-item">
@@ -476,6 +495,14 @@
 
     <div *ngIf="seccion === '2'">
       <app-pg-canjeoofertas></app-pg-canjeoofertas>
+    </div>
+
+    <div *ngIf="seccion === '3'">
+      <app-pg-dashcodigosofertas></app-pg-dashcodigosofertas>
+    </div>
+
+    <div *ngIf="seccion === '4'">
+      <app-pg-historialciudadano></app-pg-historialciudadano>
     </div>
   </main><!-- End #main -->
 
