--- a/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
+++ b/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
@@ -118,89 +118,86 @@
   
     <section class="section dashboard">
       <!-- Left side columns -->
-      <div class="col-lg-8">
         <div class="row">
 
           <!-- Sales Card -->
           <div class="col-xxl-4 col-md-6">
-            <div class="card info-card sales-card">
-
-              <div class="filter">
-                <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu1', $event)" role="button"><i class="bi bi-three-dots"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu1']">
-                  <li class="dropdown-header text-start">
-                    <h6>Filter</h6>
-                  </li>
-
-                  <li><a class="dropdown-item" href="#">Today</a></li>
-                  <li><a class="dropdown-item" href="#">This Month</a></li>
-                  <li><a class="dropdown-item" href="#">This Year</a></li>
-                </ul>
-              </div>
-
+            <div class="card info-card revenue-card">
               <div class="card-body">
-                <h5 class="card-title">Tus ofertas <span>| Tienes</span></h5>
+                <h5 class="card-title">Ofertas <span>| Activas</span></h5>
 
                 <div class="d-flex align-items-center">
                   <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                     <i class="bi bi-plus-slash-minus"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>{{+" "}}<span style="font-size: 20px;">ofertas</span></h6>
-                    <!-- <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionGestionOfertas($event)">Agregar</a><span class="text-muted small pt-2 ps-1">ofertas</span> -->
+                    <h6>{{ofertAct}}<span style="font-size: 20px;">ofertas</span></h6>
+                    <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionOfertas($event)">Agregar ofertas</a>
 
                   </div>
                 </div>
               </div>
-
             </div>
           </div><!-- End Sales Card -->
+          <!-- Sales Card -->
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card sales-card">
+              <div class="card-body">
+                <h5 class="card-title">Ofertas <span>| Inactivas</span></h5>
 
-          <!-- Revenue Card -->
+                <div class="d-flex align-items-center">
+                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                    <i class="bi bi-plus-slash-minus"></i>
+                  </div>
+                  <div class="ps-3">
+                    <h6>{{ofertIna}}<span style="font-size: 20px;">ofertas</span></h6>
+                    <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionOfertas($event)">Agregar Ofertas</a>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Sales Card --> 
+                 
           <div class="col-xxl-4 col-md-6">
             <div class="card info-card revenue-card">
               <div class="card-body">
-                <h5 class="card-title">Tus puntos verdes </h5>
+                <h5 class="card-title">Puntos Verdes <span>| Activos</span></h5>
 
                 <div class="d-flex align-items-center">
                   <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                     <i class="bi bi-geo-alt-fill"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>{{+" "}}<span style="font-size: 20px;">activos</span></h6>
-                    <!-- <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionPuntosVerdes($event)">Agregar</a><span class="text-muted small pt-2 ps-1">PVs</span> -->
+                    <h6>{{PuntoAct}}<span style="font-size: 20px;">Puntos Verdes</span></h6>
+                    <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionPuntosVerdes($event)">Gestión Puntos</a>
+
                   </div>
                 </div>
               </div>
-
             </div>
-          </div><!-- End Revenue Card -->
+          </div><!-- End Sales Card -->
+          <!-- Sales Card -->
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card sales-card">
+              <div class="card-body">
+                <h5 class="card-title">Puntos Verdes <span>| Inactivas</span></h5>
 
-          
-          <!-- Reports -->
-          <div class="col-12">
-            <div class="card">
-<!-- 
-              <div class="filter">
-                <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu4', $event)" role="button"><i class="bi bi-three-dots"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu4']">
-                  <li class="dropdown-header text-start">
-                    <h6>Filter</h6>
-                  </li>
+                <div class="d-flex align-items-center">
+                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                    <i class="bi bi-geo-alt-fill"></i>
+                  </div>
+                  <div class="ps-3">
+                    <h6>{{PuntoIna}}<span style="font-size: 20px;">Puntos Verdes</span></h6>
+                    <a href="" class="text-success small pt-1 fw-bold" (click)="SeccionPuntosVerdes($event)">Gestión Puntos</a>
 
-                  <li><a class="dropdown-item" href="#">Today</a></li>
-                  <li><a class="dropdown-item" href="#">This Month</a></li>
-                  <li><a class="dropdown-item" href="#">This Year</a></li>
-                </ul>
+                  </div>
+                </div>
               </div>
--->
-             
-
             </div>
-          </div><!-- End Reports -->              
+          </div><!-- End Sales Card --> 
 
         </div>
-      </div><!-- End Left side columns -->
          
     </section>
   </div>
