--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -12,8 +12,8 @@
   <!-- Favicons -->
   <link href="assets2/img/favicon.png" rel="icon">
   <link href="assets2/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <!-- Bootstrap CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS 
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">-->
   <!-- Optionally, you can include Popper.js for tooltips and popovers 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>-->
   <!-- Bootstrap JS 
@@ -156,7 +156,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                 <i class="bi bi-person"></i>
-                <span>My Profile</span>
+                <span>Perfil</span>
               </a>
             </li>
             <li>
@@ -166,7 +166,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
                 <i class="bi bi-gear"></i>
-                <span>Account Settings</span>
+                <span>Configuraciones</span>
               </a>
             </li>
             <li>
@@ -176,7 +176,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
                 <i class="bi bi-question-circle"></i>
-                <span>Need Help?</span>
+                <span>¿Necesitas ayuda?</span>
               </a>
             </li>
             <li>
@@ -453,31 +453,31 @@
 
                 <div class="news">
                   <div class="post-item clearfix">
-                    <img src="assets2/img/news-1.jpg" alt="">
+                    <!--<img src="assets2/img/news-1.jpg" alt="">-->
                     <h4><a href="#">Nihil blanditiis at in nihil autem</a></h4>
                     <p>Sit recusandae non aspernatur laboriosam. Quia enim eligendi sed ut harum...</p>
                   </div>
 
                   <div class="post-item clearfix">
-                    <img src="assets2/img/news-2.jpg" alt="">
+                    <!--<img src="assets2/img/news-1.jpg" alt="">-->
                     <h4><a href="#">Quidem autem et impedit</a></h4>
                     <p>Illo nemo neque maiores vitae officiis cum eum turos elan dries werona nande...</p>
                   </div>
 
                   <div class="post-item clearfix">
-                    <img src="assets2/img/news-3.jpg" alt="">
+                    <!--<img src="assets2/img/news-1.jpg" alt="">-->
                     <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
                     <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
                   </div>
 
                   <div class="post-item clearfix">
-                    <img src="assets2/img/news-4.jpg" alt="">
+                    <!--<img src="assets2/img/news-1.jpg" alt="">-->
                     <h4><a href="#">Laborum corporis quo dara net para</a></h4>
                     <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
                   </div>
 
                   <div class="post-item clearfix">
-                    <img src="assets2/img/news-5.jpg" alt="">
+                    <!--<img src="assets2/img/news-1.jpg" alt="">-->
                     <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
                     <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
                   </div>
