--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -174,7 +174,7 @@
             </li>
         
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
+              <a class="dropdown-item d-flex align-items-center" href="" (click)="SeccionFaq($event)">
                 <i class="bi bi-question-circle"></i>
                 <span>¿Necesitas ayuda?</span>
               </a>
@@ -206,7 +206,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="" (click)="SeccionDashboard($event)">
+        <a class="nav-link collapsed " href="" (click)="SeccionDashboard($event)">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -239,21 +239,21 @@
       <li class="nav-heading">Páginas</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="users-profile.html">
+        <a class="nav-link collapsed" href="" (click)="SeccionFaq($event)">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
         </a>
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-faq.html">
+        <a class="nav-link collapsed" href="" (click)="SeccionFaq($event)">
           <i class="bi bi-question-circle"></i>
           <span>F.A.Q</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
+        <a class="nav-link collapsed" href="" (click)="SeccionContacto($event)">
           <i class="bi bi-envelope"></i>
           <span>Contacto</span>
         </a>
@@ -504,6 +504,15 @@
     <div *ngIf="seccion === '4'">
       <app-pg-historialciudadano></app-pg-historialciudadano>
     </div>
+
+  <!-- Contenido para FAQ -->
+  <div *ngIf="seccion === '8'">
+    <app-pg-faq></app-pg-faq>
+  </div>
+  <!-- Contenido para Contacto -->
+  <div *ngIf="seccion === '9'">
+    <app-pg-contacto></app-pg-contacto>
+  </div>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
