--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -39,7 +39,7 @@
                   <div class="card-body">
                     <div class="pt-4 pb-2" style="margin-top: -20px;">
                       <h5 class="card-title text-center pb-0 fs-4">Crea una Cuenta</h5>
-                      <p class="text-center small" style="margin-top: -10px; font-size: 13px;">Ingrese la siguiente información</p>
+                      <p class="text-center small" style="margin-top: -10px; font-size: 13px;">¿Qué tipo de cuenta desea crear?</p>
                     </div>
                 
                       <div class="flex flex-wrap gap-3" style="margin-top: 10px;">
@@ -165,7 +165,7 @@
                       </div>
 
                       <div class="col-12 form-group" style="margin-top: -10px;">
-                        <label for="direccion" class="form-label" style="font-size: 14px;">Direccion</label>
+                        <label for="direccion" class="form-label" style="font-size: 14px;">Dirección</label>
                         <div class="input-group has-validation">
                           <input type="text" name="direccion" [(ngModel)]="direccion" class="form-control" id="direccion" required style="font-size: 13px;">
                           <div class="invalid-feedback floating-invalid-feedback">Ingresa tu nombre de usuario.</div>
