--- a/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
+++ b/src/app/ModuloUsuario/pg-dashuser/pg-dashuser.component.html
@@ -139,7 +139,8 @@
         
         <li class="nav-item dropdown pe-3">
           <a class="nav-link nav-profile d-flex align-items-center pe-0" (click)="toggleMenu('profile', $event)" role="button">
-            <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <!-- <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle"> -->
+            <i class="bi bi-person" alt="Profile" style="font-size: 2rem;"></i>
             <span class="d-none d-md-block dropdown-toggle ps-2">{{ user?.nombre +" " + user?.apellido }}</span>
           </a>
           <!-- End Profile Image Icon -->
@@ -154,19 +155,9 @@
             </li>
         
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
+              <a class="dropdown-item d-flex align-items-center" href="" (click)="SeccionPerfil($event)">
                 <i class="bi bi-person"></i>
                 <span>Perfil</span>
-              </a>
-            </li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-        
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                <i class="bi bi-gear"></i>
-                <span>Configuraciones</span>
               </a>
             </li>
             <li>
@@ -239,7 +230,7 @@
       <li class="nav-heading">Páginas</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="" (click)="SeccionFaq($event)">
+        <a class="nav-link collapsed" href="" (click)="SeccionPerfil($event)">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
         </a>
@@ -513,6 +504,12 @@
   <div *ngIf="seccion === '9'">
     <app-pg-contacto></app-pg-contacto>
   </div>
+  <!-- Contenido para Perfil -->
+  <div *ngIf="seccion === '10'">
+    <app-pg-perfilusuario></app-pg-perfilusuario>
+  </div>
+
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
