--- a/src/app/ModuloNegocio/pg-perfilnegocio/pg-perfilnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-perfilnegocio/pg-perfilnegocio.component.html
@@ -37,7 +37,7 @@
                     <div class="tab-content pt-2">
                         <div class="tab-pane fade show active profile-overview" id="profile-overview">
                             <h5 class="card-title">Acerca de</h5>
-                            <p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
+                            <p class="small fst-italic">Nuestro negocio se especializa en desarrollar soluciones tecnológicas innovadoras y personalizadas. Ofrecemos desarrollo de aplicaciones, mantenimiento de sistemas y optimización de procesos. Nos comprometemos a brindar servicios de alta calidad que impulsen el éxito y crecimiento de nuestros clientes.</p>
                             <h5 class="card-title">Detalles del Perfil</h5>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label ">Nombre Completo</div>
