--- a/src/app/ModuloUsuario/pg-perfilusuario/pg-perfilusuario.component.html
+++ b/src/app/ModuloUsuario/pg-perfilusuario/pg-perfilusuario.component.html
@@ -38,7 +38,7 @@
                   <div class="tab-content pt-2">
                       <div class="tab-pane fade show active profile-overview" id="profile-overview">
                           <h5 class="card-title">Acerca de</h5>
-                          <p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
+                          <p class="small fst-italic">Soy un ciudadano comprometido con mi comunidad, participando activamente en actividades cívicas y sociales. Valoro la justicia, la igualdad y la sostenibilidad, y busco contribuir positivamente a mi entorno a través del voluntariado y la colaboración en proyectos locales.</p>
                           <h5 class="card-title">Detalles del Perfil</h5>
                           <div class="row">
                               <div class="col-lg-3 col-md-4 label ">Nombre Completo</div>
