--- a/src/app/ModuloNegocio/pg-perfilnegocio/pg-perfilnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-perfilnegocio/pg-perfilnegocio.component.html
@@ -1,3 +1,6 @@
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+
 <div class="pagetitle">
     <h1>Perfil</h1>
 </div><!-- Fin Título de Página -->
@@ -31,7 +34,7 @@
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Editar Perfil</button>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Cambiar Contraseña</button>
+                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password" (click)="cambiarclave()">Cambiar Contraseña</button>
                         </li>
                     </ul>
                     <div class="tab-content pt-2">
@@ -41,31 +44,27 @@
                             <h5 class="card-title">Detalles del Perfil</h5>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label ">Nombre Completo</div>
-                                <div class="col-lg-9 col-md-8">Kevin Anderson</div>
+                                <div class="col-lg-9 col-md-8">{{ ngc?.nombre }}</div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-4 label">Compañía</div>
-                                <div class="col-lg-9 col-md-8">Lueilwitz, Wisoky and Leuschke</div>
+                                <div class="col-lg-3 col-md-4 label">Propietario</div>
+                                <div class="col-lg-9 col-md-8">{{ ngc?.propietario }}</div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-3 col-md-4 label">Trabajo</div>
-                                <div class="col-lg-9 col-md-8">Diseñador Web</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-3 col-md-4 label">País</div>
-                                <div class="col-lg-9 col-md-8">EE.UU.</div>
+                                <div class="col-lg-3 col-md-4 label">Tipo de Negocio</div>
+                                <div class="col-lg-9 col-md-8">{{ ngc?.tipo_negocio }}</div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label">Dirección</div>
-                                <div class="col-lg-9 col-md-8">A108 Adam Street, New York, NY 535022</div>
+                                <div class="col-lg-9 col-md-8">{{ ngc?.direccion }}</div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label">Teléfono</div>
-                                <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+                                <div class="col-lg-9 col-md-8">{{ ngc?.telefono }}</div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label">Correo Electrónico</div>
-                                <div class="col-lg-9 col-md-8">k.anderson@example.com</div>
+                                <div class="col-lg-9 col-md-8">{{ negocio?.correo_electronico }}</div>
                             </div>
                         </div>
                         <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
@@ -74,13 +73,13 @@
                                 <div class="row mb-3">
                                     <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Imagen de Perfil</label>
                                     <div class="col-md-8 col-lg-9">
-                                        <img src="assets/img/profile-img.jpg" alt="Perfil">
+                                        <img *ngIf="imgbase64" [src]="imgbase64" alt="Negocio" class="profile-image">
                                         <div class="pt-2">
-                                            <a href="#" class="btn btn-primary btn-sm" title="Subir nueva imagen de perfil"><i class="bi bi-upload"></i></a>
-                                            <a href="#" class="btn btn-danger btn-sm" title="Eliminar mi imagen de perfil"><i class="bi bi-trash"></i></a>
+                                            <a href="#" class="btn btn-primary btn-sm" title="Subir nueva imagen de perfil"><i class="bi bi-upload" style="color: white;"></i></a>
+                                            <a href="#" class="btn btn-danger btn-sm" title="Eliminar mi imagen de perfil"><i class="bi bi-trash" style="color: white;"></i></a>
                                         </div>
                                     </div>
-                                </div>
+                                </div><br><br>
                                 <div class="row mb-3">
                                     <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Nombre Completo</label>
                                     <div class="col-md-8 col-lg-9">
@@ -161,29 +160,33 @@
                         
                         <div class="tab-pane fade pt-3" id="profile-change-password">
                             <!-- Formulario de Cambio de Contraseña -->
-                            <form>
+                            <form  (ngSubmit)="CambioClave()">
+
                                 <div class="row mb-3">
-                                    <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Contraseña Actual</label>
-                                    <div class="col-md-8 col-lg-9">
-                                        <input name="password" type="password" class="form-control" id="currentPassword">
-                                    </div>
+                                  <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Contraseña actual</label>
+                                  <div class="col-md-8 col-lg-9">
+                                    <input name="password" [(ngModel)]="currentPassword" type="password" class="form-control" id="currentPassword" required minlength="8" maxlength="16" pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,16}$" >
+                                  </div>
                                 </div>
+            
                                 <div class="row mb-3">
-                                    <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">Nueva Contraseña</label>
-                                    <div class="col-md-8 col-lg-9">
-                                        <input name="newpassword" type="password" class="form-control" id="newPassword">
-                                    </div>
+                                  <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">Nueva contraseña</label>
+                                  <div class="col-md-8 col-lg-9">
+                                    <input name="newpassword" [(ngModel)]="newPassword" type="password" class="form-control" id="newPassword" required minlength="8" maxlength="16" pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,16}$">
+                                  </div>
                                 </div>
+            
                                 <div class="row mb-3">
-                                    <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Reingresa la Nueva Contraseña</label>
-                                    <div class="col-md-8 col-lg-9">
-                                        <input name="renewpassword" type="password" class="form-control" id="renewPassword">
-                                    </div>
+                                  <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Vuelve a ingresar la nueva contraseña</label>
+                                  <div class="col-md-8 col-lg-9">
+                                    <input name="renewpassword" [(ngModel)]="renewPassword" type="password" class="form-control" id="renewPassword" required minlength="8" maxlength="16" pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,16}$">
+                                  </div>
                                 </div>
+            
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+                                  <button type="submit" class="btn btn-primary">Change Password</button>
                                 </div>
-                            </form><!-- Fin Formulario de Cambio de Contraseña -->
+                              </form><!-- End Change Password Form -->
                         </div>
                     </div><!-- Fin Pestañas Bordeadas -->
                 </div>
