--- a/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
+++ b/src/app/ModuloUsuario/pg-canjeoofertas/pg-canjeoofertas.component.html
@@ -164,7 +164,7 @@
       
       <ng-template pTemplate="footer">
         <div class="d-flex justify-content-center" style="width: 100%;">
-          <button type="button" pButton label="CANCELAR" icon="pi pi-times" class="p-button-text cancel-button" (click)="onCancel()"></button>
+          <button type="button" pButton label="CANCELAR" icon="pi pi-times" class="p-button cancel-button" (click)="onCancel()"></button>
           <button type="button" pButton label="CANJEAR" icon="pi pi-check" class="p-button accept-button" (click)="CanjearOferta()"></button>
         </div>
       </ng-template>
