--- a/src/app/ModuloUsuario/pg-historialciudadano/pg-historialciudadano.component.html
+++ b/src/app/ModuloUsuario/pg-historialciudadano/pg-historialciudadano.component.html
@@ -1,25 +1,90 @@
-<div class="card-body">
-    <h5 class="card-title">Historial <span>| Ciudadano</span></h5>
-  
-    <table class="table table-borderless datatable">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Negocio</th>
-          <th scope="col">Punto Verde</th>
-          <th scope="col">Fecha</th>
-          <th scope="col">GreenCoins</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of cdn; let i = index">
-          <td>{{ i + 1 }}</td>
-          <td>{{ item.tb_negocio.nombre }}</td>
-          <td>{{ item.tb_puntos_verde.direccion }}</td>
-          <td>{{ item.fecha | date:'yyyy-MM-dd | HH:mm:ss' }}</td>
-          <td>{{ item.greencoins_obtenidos }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<div class="pagetitle">
+    <h1>Historial de reciclaje de {{ user?.nombre }}</h1>
+</div><!-- End Page Title -->
+
+<section class="section dashboard">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title"> Historial <span>/Reciclaje</span></h5>
+            <p-table
+                #dt1
+                [value]="all_historial"
+                dataKey="ofertas_id"
+                [rows]="10"
+                [showCurrentPageReport]="true"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                [loading]="loading"
+                [paginator]="true"
+                currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas"
+                [globalFilterFields]="['negocio', 'puntoVerde', 'fecha', 'greencoins']"
+                [scrollable]="true"
+                scrollHeight="500px"
+                [tableStyle]="{ 'min-width': '50rem' }"
+                [sortMode]="'single'"
+            >
+                <ng-template pTemplate="caption">
+                    <div class="flex">
+                        <button pButton label="Limpiar" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+                        <span class="p-input-icon-left ml-auto">
+                            <i class="pi pi-search"></i>
+                            <input pInputText type="text" (input)="applyFilter($event)" placeholder="Buscar palabra clave" />
+                        </span>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="negocio">
+                            <div class="flex align-items-center">
+                                Negocio <p-sortIcon field="negocio"></p-sortIcon>
+                                <p-columnFilter type="text" field="negocio" display="menu"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th pSortableColumn="puntoVerde">
+                            <div class="flex align-items-center">
+                                Punto Verde <p-sortIcon field="puntoVerde"></p-sortIcon>
+                                <p-columnFilter type="text" field="puntoVerde" display="menu"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th pSortableColumn="fecha">
+                            <div class="flex align-items-center">
+                                Fecha <p-sortIcon field="fecha"></p-sortIcon>
+                            </div>
+                        </th>
+                        <th pSortableColumn="greencoins">
+                            <div class="flex align-items-center">
+                                GreenCoins <p-sortIcon field="greencoins"></p-sortIcon>
+                                <p-columnFilter type="numeric" field="greencoins" display="menu"></p-columnFilter>
+                            </div>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-historial>
+                    <tr>
+                        <td>{{ historial.negocio }}</td>
+                        <td>{{ historial.puntoVerde }}</td>
+                        <td style="font-size: 15px;">
+                            {{ historial.fecha | date:'short' }}
+                        </td>
+                        <td>{{ "₵ " + historial.greencoins }}</td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="5">Aún no hay historial de reciclaje.</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col-12">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
