--- a/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
+++ b/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
@@ -1,38 +1,97 @@
-<div class="card-body">
-  <h5 class="card-title">Códigos <span>| Ofertas</span></h5>
-  <table class="table table-borderless datatable">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Negocio</th>
-        <th scope="col">Oferta</th>
-        <th scope="col">Fecha Caducidad</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Código</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of ofertas; let i = index">
-        <td>{{ i + 1 }}</td>
-        <td>{{ item.negocio }}</td>
-        <td>{{ item.descripcion }}</td>
-        <td>{{ item.fecha_fin | date:'yyyy-MM-dd' }}</td>
-        <td>
-          <span [ngClass]="{
-            'bg-warning': item.estado === 'EXPIRADO',
-            'bg-success': item.estado === 'GENERADO',
-            'bg-danger': item.estado === 'VALIDADO'
-          }">{{ item.estado }}</span>
-        </td>
-        <td>
-          <button *ngIf="item.estado !== 'VALIDADO'" type="button" class="btn btn-link" (click)="openModal(item)">
-            <i class="pi pi-eye"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
+<div class="pagetitle">
+    <h1>Historial de reciclaje de {{ user?.nombre }}</h1>
+</div><!-- End Page Title -->
+
+<section class="section dashboard">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title"> Códigos <span>| Ofertas</span></h5>
+            <p-table
+                #dt1
+                [value]="ofertas"
+                dataKey="codigo"
+                [rows]="10"
+                [showCurrentPageReport]="true"
+                [rowsPerPageOptions]="[10, 25, 50]"
+                [loading]="loading"
+                [paginator]="true"
+                currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas"
+                [globalFilterFields]="['negocio', 'descripcion', 'fecha_fin', 'estado']"
+                [scrollable]="true"
+                scrollHeight="500px"
+                [tableStyle]="{ 'min-width': '50rem' }"
+                [sortMode]="'single'"
+            >
+                <ng-template pTemplate="caption">
+                    <div class="flex">
+                        <button pButton label="Limpiar" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+                        <span class="p-input-icon-left ml-auto">
+                            <i class="pi pi-search"></i>
+                            <input pInputText type="text" (input)="applyFilter($event)" placeholder="Buscar palabra clave" />
+                        </span>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="negocio">
+                            <div class="flex align-items-center">
+                                Negocio <p-sortIcon field="negocio"></p-sortIcon>
+                                <p-columnFilter type="text" field="negocio" display="menu"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th pSortableColumn="descripcion">
+                            <div class="flex align-items-center">
+                                Oferta <p-sortIcon field="descripcion"></p-sortIcon>
+                                <p-columnFilter type="text" field="descripcion" display="menu"></p-columnFilter>
+                            </div>
+                        </th>
+                        <th pSortableColumn="fecha_fin">
+                            <div class="flex align-items-center">
+                                Fecha Caducidad <p-sortIcon field="fecha_fin"></p-sortIcon>
+                            </div>
+                        </th>
+                        <th pSortableColumn="estado">
+                            <div class="flex align-items-center">
+                                Estado <p-sortIcon field="estado"></p-sortIcon>
+                            </div>
+                        </th>
+                        <th>
+                          <div class="flex align-items-center">
+                            Código 
+                        </div>
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-item let-i="rowIndex">
+                    <tr>
+                        <td>{{ item.negocio }}</td>
+                        <td>{{ item.descripcion }}</td>
+                        <td>{{ item.fecha_fin | date:'yyyy-MM-dd' }}</td>
+                        <td>
+                            <span [ngClass]="{
+                              'bg-warning': item.estado === 'EXPIRADO',
+                              'bg-success': item.estado === 'GENERADO',
+                              'bg-danger': item.estado === 'VALIDADO'
+                            }">{{ item.estado }}</span>
+                        </td>
+                        <td>
+                            <button *ngIf="item.estado !== 'VALIDADO'" type="button" class="btn btn-link" (click)="openModal(item)">
+                                <i class="pi pi-eye"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="6">Aún no hay ofertas disponibles.</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+    </div>
+</section>
 
 <!-- Modal -->
 <div class="modal fade" id="codeModal" tabindex="-1" aria-labelledby="codeModalLabel" aria-hidden="true">
