--- a/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
+++ b/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
@@ -1,7 +1,7 @@
 <p-messages [(value)]="messages2" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <p-messages [(value)]="messages1" [enableService]="false" [closable]="true" class="floating-message"></p-messages>
 <div class="pagetitle">
-    <h1>Historial de reciclaje de {{ user?.nombre }}</h1>
+    <h1>Códigos obtenidos</h1>
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
