--- a/src/app/ModuloNegocio/pg-validarcodigo/pg-validarcodigo.component.html
+++ b/src/app/ModuloNegocio/pg-validarcodigo/pg-validarcodigo.component.html
@@ -59,79 +59,49 @@
 
       <!-- Right side columns -->
       <div class="col-lg-4">
-
-        <!-- Recent Activity -->
+        <!-- News & Updates Traffic -->
         <div class="card">
-          <div class="filter">
-            <a class="icon" data-bs-toggle="dropdown" (click)="toggleMenu('menu7', $event)" role="button"><i class="bi bi-three-dots"></i></a>
-            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow" *ngIf="menus['menu7']">
-              <li class="dropdown-header text-start">
-                <h6>Filter</h6>
-              </li>
+  
 
-              <li><a class="dropdown-item" href="#">Today</a></li>
-              <li><a class="dropdown-item" href="#">This Month</a></li>
-              <li><a class="dropdown-item" href="#">This Year</a></li>
-            </ul>
-          </div>
+          <div class="card-body pb-0">
+            <h5 class="card-title">Publicidad <span>| Today</span></h5>
 
-          <div class="card-body">
-            <h5 class="card-title">Recent Activity <span>| Today</span></h5>
+            <div class="news">
+              <div class="post-item clearfix">
+                <!--<img src="assets2/img/news-1.jpg" alt="">-->
+                <h4><a href="#">Nihil blanditiis at in nihil autem</a></h4>
+                <p>Sit recusandae non aspernatur laboriosam. Quia enim eligendi sed ut harum...</p>
+              </div>
 
-            <div class="activity">
+              <div class="post-item clearfix">
+                <!--<img src="assets2/img/news-1.jpg" alt="">-->
+                <h4><a href="#">Quidem autem et impedit</a></h4>
+                <p>Illo nemo neque maiores vitae officiis cum eum turos elan dries werona nande...</p>
+              </div>
 
-              <div class="activity-item d-flex">
-                <div class="activite-label">32 min</div>
-                <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
-                <div class="activity-content">
-                  Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
-                </div>
-              </div><!-- End activity item-->
+              <div class="post-item clearfix">
+                <!--<img src="assets2/img/news-1.jpg" alt="">-->
+                <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
+                <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
+              </div>
 
-              <div class="activity-item d-flex">
-                <div class="activite-label">56 min</div>
-                <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
-                <div class="activity-content">
-                  Voluptatem blanditiis blanditiis eveniet
-                </div>
-              </div><!-- End activity item-->
+              <div class="post-item clearfix">
+                <!--<img src="assets2/img/news-1.jpg" alt="">-->
+                <h4><a href="#">Laborum corporis quo dara net para</a></h4>
+                <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
+              </div>
 
-              <div class="activity-item d-flex">
-                <div class="activite-label">2 hrs</div>
-                <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
-                <div class="activity-content">
-                  Voluptates corrupti molestias voluptatem
-                </div>
-              </div><!-- End activity item-->
+              <div class="post-item clearfix">
+                <!--<img src="assets2/img/news-1.jpg" alt="">-->
+                <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
+                <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
+              </div>
 
-              <div class="activity-item d-flex">
-                <div class="activite-label">1 day</div>
-                <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
-                <div class="activity-content">
-                  Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
-                </div>
-              </div><!-- End activity item-->
-
-              <div class="activity-item d-flex">
-                <div class="activite-label">2 days</div>
-                <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
-                <div class="activity-content">
-                  Est sit eum reiciendis exercitationem
-                </div>
-              </div><!-- End activity item-->
-
-              <div class="activity-item d-flex">
-                <div class="activite-label">4 weeks</div>
-                <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
-                <div class="activity-content">
-                  Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
-                </div>
-              </div><!-- End activity item-->
-
-            </div>
+            </div><!-- End sidebar recent posts-->
 
           </div>
-        </div><!-- End Recent Activity -->
+        </div><!-- End News & Updates -->
+        
       </div><!-- End Right side columns -->
 
     </div>
