--- a/src/app/Template/pg-recuperar/pg-recuperar.component.html
+++ b/src/app/Template/pg-recuperar/pg-recuperar.component.html
@@ -41,7 +41,7 @@
     
                     <div class="pt-4 pb-2" >
                       <h5 class="card-title text-center pb-0 fs-4" style="margin-top: -30px;">Recuperación de cuenta</h5>
-                      <p class="text-center small" style="font-size: 13px;">Ingrese su correo para el envio del codigo</p>
+                      <p class="text-center small" style="font-size: 13px;">Ingrese su correo para el envío del código</p>
                     </div>
     
                     <form #form="ngForm" *ngIf="paso === 1" (ngSubmit)="recuperar(form)" class="row g-3 needs-validation" novalidate>
