--- a/src/app/ModuloNegocio/pg-historialnegocio/pg-historialnegocio.component.html
+++ b/src/app/ModuloNegocio/pg-historialnegocio/pg-historialnegocio.component.html
@@ -17,7 +17,7 @@
                 [rowsPerPageOptions]="[10, 25, 50]"
                 [loading]="loading"
                 [paginator]="true"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+                currentPageReportTemplate="Mostrar {first} de {last} de {totalRecords} entradas"
                 [globalFilterFields]="['ciudadano', 'puntoVerde', 'greencoins', 'fecha']"
                 [scrollable]="true"
                 scrollHeight="500px"
